# examples

./: .gitignore  Cargo.toml  LICENSE  README.md
anchoring-data/: README.md
anchoring-data/cli/: README.md
anchoring-data/client/: README.md
anchoring-data/client/src/: main.rs
data-anchor/cli/: cli.sh
data-anchor/client/: .env.example  Cargo.toml
src/: fetch.rs  lib.rs  logs.rs  main.rs  utils.rs
src/utils/: accounts.rs  mod.rs  parse.rs  types.rs
