[package]
name = "backtest-example"
version = "0.1.0"
edition = "2024"
description = "Backtest session example using simulator-client"

[[bin]]
name = "backtest-example"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
simulator-api = "0.1.0"
simulator-client = "0.1.0"
solana-address = "1.0.0"
solana-client = "3.1.0"
solana-commitment-config = "3.1.0"
solana-loader-v3-interface = "6.0.0"
solana-pubkey = "3"
solana-rpc-client-api = "3.1.0"
solana-signature = "3"
solana-transaction-status = "3.1"
tokio = { version = "1", features = ["full"] }
url = "2"
