[package]
name = "backtest-example"
version = "0.1.0"
edition = "2024"
description = "Backtest session example using simulator-client"

[[bin]]
name = "backtest-example"
path = "src/main.rs"

[[bin]]
name = "tx-pause"
path = "src/bin/tx_pause/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
futures = "0.3"
simulator-api = "0.7.0"
simulator-client = "0.7.0"
solana-account-decoder = "3.1.0"
solana-address = "1.0.0"
solana-client = "3.1.0"
solana-commitment-config = "3.1.0"
solana-loader-v3-interface = "6.0.0"
solana-pubkey = "3"
solana-rpc-client-api = "3.1.0"
solana-signature = "3"
history-model = { path = "../nitro-stream/crates/history-model" }
solana-message = "3.1"
solana-transaction = "3.1"
solana-transaction-status = "3.1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
